syntax = "proto3";

package proto;

option go_package = ".;proto";

import 'models/external_system_reference.proto';

message User{
  string id = 1 [json_name = "id"];
  UserType userType = 10 [json_name = "user_type"];
  repeated IdentityProviderReference identityProviderReference = 20 [json_name = "identity_provider_reference"];
  repeated string roleIds = 30 [json_name = "role_ids"];
}

enum UserType {
  USER_TYPE_USER = 0;
  USER_TYPE_APPROVER = 1;
}

// GetUser models
message GetUserRequest {
  optional string user_id = 1 [json_name = "user_id"];
  optional string email = 10 [json_name = "email"];
}

message GetUserResponse{
  repeated User users = 1 [json_name = "users"];
}

// CreateUser models
message CreateUserRequest{
  string firstName = 1 [json_name = "first_name"];
  string lastName = 10 [json_name = "last_name"];
  string email = 20 [json_name = "email"];
  repeated IdentityProviderReference externalSystemReferences = 30 [json_name = "external_system_references"];
}

message CreateUserResponse{
  string userId = 1 [json_name = "user_id"];
}
